--- a/assets2/css/main.css
+++ b/assets2/css/main.css
@@ -1892,7 +1892,7 @@ input, select, textarea {
 		}
 
 			ul.alt li {
-				border-top: solid 1px #c9c9c9;
+				border-top: psolid 1px #c9c9c9;
 				padding: 0.5em 0;
 			}
 
@@ -2309,19 +2309,31 @@ input, select, textarea {
 		}
 
 /* Image */
+	
+	#imagen_principal {
+		border-radius: 4px;
+		border: 0;
+		display: block;
+		position: relative;
+		margin: auto;
+		width: 50%
+
+		
+	}
 
 	.image {
 		border-radius: 4px;
 		border: 0;
 		display: inline-block;
 		position: relative;
+		margin: auto
 	}
 
 		.image img {
 			border-radius: 4px;
 			display: block;
 		}
-
+			
 		.image.left, .image.right {
 			max-width: 40%;
 		}
@@ -2344,12 +2356,13 @@ input, select, textarea {
 
 		.image.fit {
 			display: block;
-			margin: 0 0 2em 0;
-			width: 100%;
+			margin: auto;
+			width: 80%;
 		}
 
 			.image.fit img {
-				width: 100%;
+				width: 50%;
+
 			}
 
 		.image.main {
